.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:25:09 **** Clean-only build of configuration Debug for project BST ****
make clean 
rm -rf  ./src/main.o  ./src/main.d  BST
 
18:44:10 **** Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
../src/DynamicArray.cpp: In function ‘int main()’:
../src/DynamicArray.cpp:23:12: error: invalid conversion from ‘void*’ to ‘int*’ [-fpermissive]
  p = malloc(10* sizeof(int));
      ~~~~~~^~~~~~~~~~~~~~~~~
src/subdir.mk:18: recipe for target 'src/DynamicArray.o' failed
make: *** [src/DynamicArray.o] Error 1
18:46:10 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
../src/DynamicArray.cpp: In function ‘int main()’:
../src/DynamicArray.cpp:22:8: warning: variable ‘p’ set but not used [-Wunused-but-set-variable]
  int * p ;
        ^
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
18:46:32 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
18:46:47 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
../src/DynamicArray.cpp: In function ‘int main()’:
../src/DynamicArray.cpp:23:30: error: lvalue required as left operand of assignment
  p = new int [5] = {1,2,3,4,5};
                              ^
make: *** [src/DynamicArray.o] Error 1
src/subdir.mk:18: recipe for target 'src/DynamicArray.o' failed
18:46:56 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
18:47:13 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
18:48:06 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
../src/DynamicArray.cpp: In function ‘void print(int*)’:
../src/DynamicArray.cpp:17:3: error: expected ‘;’ before ‘p’
   p = p+1;
   ^
make: *** [src/DynamicArray.o] Error 1
src/subdir.mk:18: recipe for target 'src/DynamicArray.o' failed
18:48:15 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
18:48:17 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:06:05 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:06:08 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:07:16 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:07:21 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:07:56 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:07:59 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:08:17 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:09:51 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:09:54 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
19:10:38 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:11:57 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:12:11 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
Building file: ../src/DynamicArray.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DynamicArray.d" -MT"src/DynamicArray.d" -o "src/DynamicArray.o" "../src/DynamicArray.cpp"
Finished building: ../src/DynamicArray.cpp
 
Building target: DynamicArray
Invoking: Cross G++ Linker
g++  -o "DynamicArray"  ./src/DynamicArray.o   
Finished building target: DynamicArray
 
19:12:13 **** Incremental Build of configuration Debug for project DynamicArray ****
make all 
make: Nothing to be done for 'all'.
